# LearningMathforSlam

./: CMakeLists.txt  README.md
Lie Group and Lie Algebra (Sophus Library)/: CMakeLists.txt  README.md  trajectoryError.cpp  useSophus.cpp
Linear Algebra (Eigen Library)/: CMakeLists.txt  EigenDense.cpp  README.md  eigenGeometry.cpp
Monocular camera model/: README.md
Nonlinear optimization/: README.md
Trajectory Viewer (Pangolin Viewer)/: CMakeLists.txt  README.md  poseViewer.cpp
